Fix spacing for modal header

--- a/frontend/src/stylesheets/modal.css
+++ b/frontend/src/stylesheets/modal.css
@@ -31,6 +31,7 @@
 }
 
 .modal-header {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
